Show sidebar floating on mobile and fixed on desktop
- Show tooltips on the navbar buttons

--- a/src/app/components/sidebar/sidebar.less
+++ b/src/app/components/sidebar/sidebar.less
@@ -1,5 +1,7 @@
-#Sidebar {
-  margin-top: 65px;
+#slide-out {
+  @media @screen-desktops {
+    margin-top: 65px;
+  }
 }
 
 #Sidebar-search {
